--- a/Django_HomeWork/home_work/blog/templates/blog/home.html
+++ b/Django_HomeWork/home_work/blog/templates/blog/home.html
@@ -1,4 +1,5 @@
 {%extends 'base.html' %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +8,6 @@
 </head>
 <body>
 {%block content %}
-<h1>hello</h1>
 {% endblock %}
 </body>
 </html>
