--- a/Django_HomeWork/home_work/blog/templates/blog/home.html
+++ b/Django_HomeWork/home_work/blog/templates/blog/home.html
@@ -1,4 +1,4 @@
-{%extends 'base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -7,7 +7,26 @@
     <title>Title</title>
 </head>
 <body>
-{%block content %}
+{% block content %}
+    <div id="posts-field">
+        {% for post in posts %}
+            <div class="post-object">
+                <div class="post-title">
+                    <h3>{{ post.title }}</h3>
+                </div>
+                <div class="post-image-field">
+                    {% if post.photo %}
+                        <img src="{{ post.photo.url }}">
+                    {% else %}
+                        <img src="{% static 'images/no-image.jpg' %}">
+                    {% endif %}
+                </div>
+                <div class="post-content">
+                    <p>{{ post.content }}</p>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 {% endblock %}
 </body>
 </html>
