--- a/Django_HomeWork/home_work/static/css/style.css
+++ b/Django_HomeWork/home_work/static/css/style.css
@@ -485,11 +485,11 @@ table {
     flex-direction: column;
     align-items: center;
     width: 40%;
-    height: 300px;
+    height: 400px;
     margin: 30px 30px;
     box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.09);
     cursor: pointer;
-    min-height: 150px;
+    min-height: 250px;
     transition: 0.2s ease-in-out;
 }
 
@@ -508,6 +508,7 @@ table {
     text-align: center;
     padding: 0 10px 10px 10px;
     overflow: auto;
+    margin-bottom: 20px;
 }
 
 .post-image-field {
@@ -531,4 +532,71 @@ table {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+.post-link{
+    width: 25%;
+}
+.post-link button{
+    text-decoration: none;
+    text-align: center;
+    width: 100%;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    padding: 20px;
+    border: 1px solid #302c2c;
+    border-radius: 5px;
+    background-color: #ff6c44;
+    font-size: 16px;
+    font-weight: 600;
+    transition: 0.2s ease-in-out;
+}
+
+.post-link  a{
+    text-decoration: none;
+    color: #302c2c;
+    transition: 0.2s ease-in-out;
+}
+.post-link button:hover {
+    background-color: #302c2c;
+    color: white;
+}
+.post-link button:hover a{
+    color: white;
+}
+
+
+
+.detail-post {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.detail-post-title {
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 24px;
+    font-weight: bold;
+    padding: 30px;
+}
+
+.detail-post-body {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 1200px;
+}
+
+.detail-post-image {
+    flex: 1;
+    margin-right: 20px;
+}
+
+.detail-post-image img {
+    max-width: 100%;
+    height: auto;
+}
+
+.detail-post-content {
+    flex: 2;
 }
