--- a/Django_HomeWork/home_work/static/css/style.css
+++ b/Django_HomeWork/home_work/static/css/style.css
@@ -585,6 +585,7 @@ table {
     justify-content: space-between;
     width: 100%;
     max-width: 1200px;
+    padding-bottom: 100px;
 }
 
 .detail-post-image {
@@ -710,5 +711,8 @@ table {
 .page:hover {
     background-color: #302c2c;
     color: #f9f9f9;
+}
 
+.login-field{
+    padding: 20px 20px 500px 20px;
 }
