--- a/Django_HomeWork/home_work/static/css/style.css
+++ b/Django_HomeWork/home_work/static/css/style.css
@@ -482,11 +482,11 @@ table {
     flex-direction: column;
     align-items: center;
     width: 40%;
-    height: 400px;
+    height: 450px;
     margin: 30px 30px;
     box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.09);
     cursor: pointer;
-    min-height: 250px;
+    min-height: 300px;
     transition: 0.2s ease-in-out;
 }
 
@@ -504,7 +504,7 @@ table {
     width: 100%;
     text-align: center;
     padding: 0 10px 10px 10px;
-    overflow: auto;
+    margin-top: 50px;
     margin-bottom: 20px;
 }
 
@@ -512,7 +512,6 @@ table {
     display: grid;
     width: 200px;
     height: 150px;
-    margin-bottom: 30px;
     justify-content: center;
     align-items: center;
 }
@@ -529,6 +528,7 @@ table {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    max-height: 150px;
 }
 
 .post-link {
@@ -570,6 +570,7 @@ table {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 200px;
 }
 
 .detail-post-title {
@@ -582,15 +583,30 @@ table {
 
 .detail-post-body {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: flex-start;
     width: 100%;
     max-width: 1200px;
     padding-bottom: 100px;
 }
 
+.detail-post-meta {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.detail-post-author {
+    position: absolute;
+    top: -30px; /* Отступ от верхней части контейнера .detail-post-meta */
+    left: 0;
+    font-weight: bold;
+}
+
 .detail-post-image {
     flex: 1;
-    margin-right: 20px;
+    margin-top: 20px; /* Отступ сверху для изображения */
 }
 
 .detail-post-image img {
@@ -600,7 +616,34 @@ table {
 
 .detail-post-content {
     flex: 2;
+    margin-top: 20px;
 }
+
+.detail-post-edit {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+}
+
+.detail-post-edit-button {
+    display: block;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 600;
+    margin: 30px auto;
+    padding: 10px 25px;
+    background-color: #ff6c44;
+    border: none;
+    border-radius: 7px;
+    cursor: pointer;
+    outline: none;
+    transition: 0.3s ease;
+    color: #f9f9f9;
+}
+.detail-post-edit-button:hover {
+    background-color: #302c2c;
+}
+
 
 .form-field {
     padding: 30px;
@@ -677,14 +720,16 @@ table {
     color: #f9f9f9;
 }
 
-.pagination{
+.pagination {
     text-align: center;
     padding: 30px;
     text-decoration: none;
 }
-.pagination a{
+
+.pagination a {
     text-decoration: none;
 }
+
 .page {
     display: inline-block;
     width: 3%;
@@ -699,11 +744,13 @@ table {
     font-size: 20px;
     transition: 0.2s ease-in-out;
 }
-.page.current{
-      background-color: #f9f9f9;
+
+.page.current {
+    background-color: #f9f9f9;
 }
-.page.current:hover{
-      background-color: #f9f9f9;
+
+.page.current:hover {
+    background-color: #f9f9f9;
     color: #302c2c;
 
 }
@@ -715,20 +762,54 @@ table {
 
 .login-form {
     display: block;
-  max-width: 400px;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  margin-bottom: 500px;
-  background-color: #f9f9f9;
-  margin-top: 100px;
+    max-width: 400px;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-bottom: 500px;
+    background-color: #f9f9f9;
+    margin-top: 100px;
 
 }
 
 .login-form label {
-  display: block;
-  margin-bottom: 8px;
-  font-weight: bold;
+    display: block;
+    margin-bottom: 8px;
+    font-weight: bold;
 }
+
+.post-data {
+    position: relative;
+    margin-top: 20px;
+}
+
+.post-data a {
+    text-decoration: none;
+
+}
+
+.post-data button {
+    position: absolute;
+    bottom: 50px;
+    right: 0;
+    text-align: center;
+    font-size: 12px;
+    padding: 10px 10px;
+    background-color: #ff6c44;
+    border: none;
+    border-radius: 7px;
+    cursor: pointer;
+    outline: none;
+    transition: 0.3s ease;
+    color: #f9f9f9;
+
+}
+
+.post-data button:hover {
+    background-color: #302c2c;
+
+}
+
+
 
